--- a/src/main/java/org/mealsapp/view/MealDataView.form
+++ b/src/main/java/org/mealsapp/view/MealDataView.form
@@ -1,41 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.mealsapp.view.MealDataView">
-  <grid id="27dc6" binding="pnlMealData" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="pnlMealData" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="12" left="12" bottom="12" right="12"/>
     <constraints>
-      <xy x="20" y="20" width="620" height="400"/>
+      <xy x="20" y="20" width="688" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="f3c3e" class="javax.swing.JLabel" binding="lblMealName">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Όνομα γεύματος"/>
         </properties>
       </component>
-      <component id="519d9" class="javax.swing.JTextField" binding="txtMealName">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="762f2" class="javax.swing.JButton" binding="btnSearch">
-        <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <focusPainted value="false"/>
-          <text value="Αναζήτηση"/>
-        </properties>
-      </component>
       <scrollpane id="1cbf0">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -51,7 +34,7 @@
       <grid id="d6f6c" binding="pnlMealDataControls" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -64,6 +47,7 @@
               <focusPainted value="false"/>
               <label value="Αποθήκευση σε ΒΔ"/>
               <text value="Αποθήκευση σε ΒΔ"/>
+              <toolTipText value="Αποθηκεύει το επιλεγμένο γεύμα σε ΒΔ"/>
             </properties>
           </component>
           <component id="9794a" class="javax.swing.JButton" binding="btnEditMealData">
@@ -75,6 +59,7 @@
               <focusTraversalPolicyProvider value="false"/>
               <label value="Επεξεργασία δεδομένω γεύματος"/>
               <text value="Επεξεργασία δεδομένω γεύματος"/>
+              <toolTipText value="Αλλάζει τα στοιχεία του γεύματος"/>
             </properties>
           </component>
           <component id="4ffe3" class="javax.swing.JButton" binding="btnDeleteMealData">
@@ -85,10 +70,41 @@
               <focusPainted value="false"/>
               <label value="Διαγραφή δεδομέων γεύματος"/>
               <text value="Διαγραφή δεδομέων γεύματος"/>
+              <toolTipText value="Διαγράφη το γεύμα από τη βάση δεδομένων"/>
             </properties>
           </component>
         </children>
       </grid>
+      <component id="519d9" class="javax.swing.JTextField" binding="txtMealName">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <toolTipText value="Το γεύμα που ψάχνουμε"/>
+        </properties>
+      </component>
+      <component id="3308a" class="javax.swing.JButton" binding="btnClearTable">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <focusPainted value="false"/>
+          <text value="Διαγραφή"/>
+          <toolTipText value="Διαγράφει τα δεδομένα του πίνακα"/>
+        </properties>
+      </component>
+      <component id="762f2" class="javax.swing.JButton" binding="btnSearch">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <focusPainted value="false"/>
+          <text value="Αναζήτηση"/>
+          <toolTipText value="Ψάχνει το API για το γεύμα"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
