--- a/src/main/java/org/mealsapp/view/MealCategoriesView.form
+++ b/src/main/java/org/mealsapp/view/MealCategoriesView.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.mealsapp.view.MealCategoriesView">
-  <grid id="27dc6" binding="pnlMealCategories" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="pnlMealCategories" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="12" left="12" bottom="12" right="12"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="563" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,22 +16,39 @@
           <text value="Κατηγορία Γεύματος"/>
         </properties>
       </component>
-      <component id="8beea" class="javax.swing.JComboBox" binding="comboMealCategory">
+      <component id="e19bb" class="javax.swing.JTextField" binding="txtCategoryName">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="d0611" class="javax.swing.JTextArea" binding="txtCategoryResults">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <editable value="false"/>
+          <toolTipText value="Επιλογή κατηγορίας γεύματος"/>
         </properties>
       </component>
+      <component id="4b1c8" class="javax.swing.JButton" binding="btnSearchCategory">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <focusPainted value="false"/>
+          <text value="Αναζήτηση"/>
+          <toolTipText value="Αναζήτηση κατηγορίας γεύματος"/>
+        </properties>
+      </component>
+      <scrollpane id="eeef8">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="987ab" class="javax.swing.JTable" binding="tblCategoryResults">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
